unpackaged/objects/Offer_Code__c.object
<CustomObject>
  <description>Used by DNA Inside/Telesales Teams to associate Promotional Codes with Tasks and Campaigns</description>
  <fields>
    <fullName>Campaign_Related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Campaign</label>
    <lookupFilter>
      <active>true</active>
      <filterItems>
        <field>Campaign.RecordTypeId</field>
        <operation>equals</operation>
        <value>DNA Campaign</value>
      </filterItems>
      <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Offer Codes</relationshipLabel>
    <relationshipName>Offer_Codes</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Legacy_ID__c</fullName>
    <label>Legacy ID</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Offer_Code_Status__c</fullName>
    <formula>IF(  Start_Date__c &gt; TODAY(), "Planned", if( Expiration_Date__c  &gt;=
TODAY() , "Valid Offer Code", "Expired"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Code Status</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Offer_Code_Type__c</fullName>
    <label>Offer Code Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Retention</fullName>
        </value>
        <value>
          <fullName>Adoption</fullName>
        </value>
        <value>
          <fullName>Ad Hoc</fullName>
        </value>
        <value>
          <fullName>Promotion</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Source</fullName>
        </value>
        <value>
          <fullName>Special</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Used_by_Country_SBU__c</fullName>
    <label>Used by Country/SBU</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>USA- DNA TeleSales Core</fullName>
        </value>
        <value>
          <fullName>USA - DNA TeleSales Prosthetics</fullName>
        </value>
        <value>
          <fullName>USA - Endo Maillefer</fullName>
        </value>
        <value>
          <fullName>CAN - DNA Inside Sales</fullName>
        </value>
        <value>
          <fullName>USA - Inside Sales ENDO</fullName>
        </value>
        <value>
          <fullName>USA - Implants</fullName>
        </value>
        <value>
          <fullName>USA - Sales</fullName>
        </value>
        <value>
          <fullName>Iberia - Ambassador</fullName>
        </value>
        <value>
          <fullName>Iberia - Telesales</fullName>
        </value>
        <value>
          <fullName>Germany - Lab</fullName>
        </value>
        <value>
          <fullName>Germany - PRE</fullName>
        </value>
        <value>
          <fullName>Austria - Lab</fullName>
        </value>
        <value>
          <fullName>​​​​​​Austria - PRE</fullName>
        </value>
        <value>
          <fullName>Indonesia</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Offer Code</label>
  <listViews>
    <fullName>All</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>All_Offer_Codes</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Offer_Code_Type__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Offer Codes</label>
    <language>en_US</language>
  </listViews>
  <nameField>
    <label>Offer Code Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Offer Codes</pluralLabel>
  <sharingModel>Private</sharingModel>
</CustomObject>